--- a/site/index.htm
+++ b/site/index.htm
@@ -5,5 +5,6 @@
 	</head>
 	<body>
 		<h1>UnknownAuthorPR!</h1>
+		<button onclick="window.location.href = 'orbit.html';">Orbit</button>
 	</body>
 </html>
