--- a/site/index.htm
+++ b/site/index.htm
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Test site</title>
+		<title>My Website</title>
 	</head>
 	<body>
-		<h1>UnknownAuthorPR!</h1>
-		<button onclick="window.location.href = 'orbit.html';">Orbit</button>
+		<h1>UnknownAuthorPR! - Science tests</h1>
+
+		<button onclick="window.location.href = 'orbit.html';">Orbit</button><br>
+		<button onclick="window.location.href = 'electromagnetic_field.html';">Electric Force</button>
 	</body>
 </html>
